--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2 class="typing-effect delay-3">student and programmer</h2>
         </div>
     </div>
-    <div>
+    <div class="mobile-fix">
         <div>
             <div class="textbox slide-in-right delay-3">
                 <h3 class="fade-in delay-5">Who is <span class="red">h3xagon?</span></h3>
